--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,15 @@
 name: control_flow_statements02
 description: A sample command-line application.
 version: 1.0.0
-# homepage: https://www.example.com
+# repository: https://github.com/my_org/my_repo
 
 environment:
-  sdk: '>=2.17.5 <3.0.0'
+  sdk: ^3.0.5
 
+# Add regular dependencies here.
 # dependencies:
-#   path: ^1.8.0
+  # path: ^1.8.0
 
 dev_dependencies:
   lints: ^2.0.0
-  test: ^1.16.0
+  test: ^1.21.0
